<resources>
    <string name="app_name">Car Tracker</string>
    <string name="login_activity_button_string">Login</string>
    <string name="login_activity_name_string">Name:</string>
    <string name="login_activity_password_button">Password:</string>
    <string name="offline_mode_dialog">Do you really want to proceed in offline mode? In this mode all data should be send manually.</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_service_status">Location service status</string>
    <string name="obd_connection_status">OBD connection status</string>
    <string name="vin_number">VIN number</string>
    <string name="average_fuel_consumption">Average fuel consumption</string>
    <string name="distance">Distance traveled in current session</string>
    <string name="speed">Speed</string>
    <string name="current_session_time">Current session time</string>
    <string name="bluetooth_status">Bluetooth status</string>
    <string name="obd_set_button">Set OBD</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_activity_surname">Surname:</string>
    <string name="register_pesel">Login:</string>
    <string name="register_activity_button_click">Register</string>
    <string name="register">Register</string>
    <string name="login_failure">No internet connection</string>
    <string name="wrong_user">Wrong credentials</string>
    <string name="logged_as_string">WELCOME</string>
    <string name="logout">Logout</string>
    <string name="send">SEND</string>
    <string name="speed_unit">hm/h</string>
    <string name="rpm_unit">RPM</string>
    <string name="time">Time</string>
    <string name="distance_km">Distance [km]</string>
    <string name="on">ON</string>
    <string name="obd_device">OBD Device</string>
    <string name="default_value">-</string>
    <string name="delete">Delete</string>
    <string name="delete_route_successful">Delete successful</string>
    <string name="route_string">Route</string>
    <string name="engine_runtime">Engine runtime</string>
    <string-array name="sending_frequency">
        <item>5 sec</item>
        <item>10 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
    </string-array>

</resources>
