<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_activity_padding"
    android:paddingRight="@dimen/horizontal_activity_padding"
    tools:context="com.polsl.android.employeetracker.activity.LoginActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/vertical_activity_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_pesel" />

        <EditText
            android:id="@+id/login_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_password_button" />

        <EditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/button_height"
            android:background="@drawable/button_selector"
            android:onClick="onLoginButtonClick"
            android:text="@string/login_activity_button_string" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:paddingTop="@dimen/bottom_padding_route_item"
            android:onClick="registerNewUser"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/vertical_activity_margin">
        <Button
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/button_height"
            android:background="@drawable/button_selector"
            android:onClick="offlineModeCLick"/>
    </RelativeLayout>

</RelativeLayout>
